# pyacq

./: .travis.yml  LICENSE  README.md  README.rst  appveyor.yml  outlier2.ipynb  pyproject.toml  setup.py
doc/: Makefile  conf.py  index.rst  intro.rst  make.bat  manager.rst  nodes.rst  streams.rst
doc/apiref/: core.rst  devices.rst  index.rst  processors.rst  rpc.rst  viewers.rst
doc/examples/: analog_display.rst  custom_client.rst  emotiv_oscope.rst  gen.py  index.rst  local_or_remote.rst  logger.rst  noise_generator.rst  pyaudio_oscope.rst  pyaudio_oscope_local.rst  pyaudio_oscope_remote.rst  pyaudio_tfr.rst  simple_client.rst  (+3 more)
example/: emotiv_oscilloscope.py  example_oscilloscope.py  example_oscilloscope_tfr.py  example_timefreq.py  example_topoplot.py  local_or_remote.py  measurementcomputing_oscilloscope.py  measurementcomputing_simple.py  multiple_acq_qt4.py  multiple_acquisition.py  multiple_acquisition_timestampserver.py  nidaq.py  pyaudio_oscope.py  pyaudio_oscope2.py  pyaudio_tfr.py  pyaudio_triggerscope.py  scrollplot.py  simple_acquisition.py  simple_client.py  simple_emotiv.py  simple_webcam.py  spectrogram.py  triggerscope.py  video_display.py
examples/: custom_client.py  debugging_tools.py  emotiv_oscope_local.py  local_or_remote.py  micromanager_camera.py  ni_daqmx_with_oscilloscope.py  noise_generator.py  pyaudio_oscope.py  pyaudio_oscope_local.py  pyaudio_oscope_remote.py  pyaudio_tfr.py  pyaudio_triggerscope.py  simple_input_node.py  simple_webcam.py
pyacq/: __init__.py  version.py
tools/: host_server.py  install_python.ps1  mk_virtualenv.sh
(+204 files in other folders)
